# socks-server

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config.json  docker-compose.yml  main.cpp
.github/workflows/: codeql.yml  docker-image.yml  release.yml
docker/: Dockerfile  docker-compose.yml
include/: socks5_connect.h  socks5_server.h  socks5_type.h  socks_server.h
include/common/: common.h  logger.h  socks5_type.h
include/option/: parser.h
include/server/: socks5_server.h
include/session/: socks5_session.h
include/socks5/: socks5_connect.h  socks5_server.h  socks5_session.h  socks5_type.h
include/util/: io_context_pool.h
src/common/: common.cpp  logger.cpp
src/option/: parser.cpp
src/server/: socks5_server.cpp
src/session/: socks5_session.cpp
src/socks5/: socks5_connect.cpp  socks5_server.cpp  socks5_session.cpp
src/util/: io_context_pool.cpp
